# mini_fisher

./: .gitignore  Cargo.toml  README.md  build.rs
data/: udat.json
src/: catch_handler.rs  logging.rs  main.rs
src/data/: fish.rs  mod.rs  rods.rs  shop.rs  userfile.rs
