[package]
name = "mini_fisher"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better_term = "*"
egui = "*"
eframe = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rand = "*"
chrono = "*"
image = "*"
egui_extras = { version = "*", features = ["all_loaders"] }

[build-dependencies]
winres = "*"